[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netstream"
version = "0.1.0"
description = "Unified BGP API for FRR and GoBGP routers"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["api-routing*"]
